# fotomagoufis

./: .gitignore  LICENSE  README.md  photo-lab-spec.md  pyproject.toml
docs/superpowers/plans/: 2026-04-30-photolab-implementation.md
docs/superpowers/specs/: 2026-04-30-photolab-design.md
src/photolab/: __init__.py  analyze.py  blend.py  cli.py  color.py  config.py  contact_sheet.py  correct.py  evaluate.py  loader.py  print_prep.py  utils.py
src/photolab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyze.py  test_blend.py  test_color.py  test_config.py  test_contact_sheet.py  test_correct.py  test_evaluate.py  test_loader.py  test_print_prep.py
