[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "photolab"
version = "0.1.0"
description = "CLI photo editing and print preparation tool — generates correction variants and prepares files for printing with ICC color management."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "rawpy>=0.19",
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "typer>=0.9",
]

[project.urls]
Repository = "https://github.com/dimatosj/fotomagoufis"

[project.optional-dependencies]
evaluate = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
photolab = "photolab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
